@@ -1,45 +1,38 @@
-import org.gradle.api.JavaVersion.VERSION_21
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 repositories {
   mavenCentral()
   maven("https://jitpack.io")
-  maven("https://repo.spring.io/milestone")
-  maven("https://repo.spring.io/snapshot")
 }
 plugins {
-  id("org.springframework.boot") version "3.4.0-SNAPSHOT"
-  id("io.spring.dependency-management") version "1.1.6"
   kotlin("jvm") version "2.0.20"
-  kotlin("plugin.spring") version "2.0.20"
+  id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 dependencies {
-  implementation("org.springframework.boot:spring-boot-starter-web")
-  implementation("org.jetbrains.kotlin:kotlin-reflect")
-  testImplementation("org.springframework.boot:spring-boot-starter-test")
-  testImplementation("com.google.truth:truth:1.4.4")
-  testImplementation("io.mockk:mockk:1.13.12")
-  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+  implementation("io.ktor:ktor-server-core-jvm:2.1.3")
+  implementation("io.ktor:ktor-server-netty-jvm:2.1.3")
+  implementation("ch.qos.logback:logback-classic:1.4.5")
+  testImplementation("io.ktor:ktor-client-cio:2.1.3")
+  testImplementation("org.junit.jupiter:junit-jupiter:5.9.0")
+  testImplementation("com.google.truth:truth:1.1.3")
+  testImplementation("io.mockk:mockk:1.13.2")
 }
-java {
-  sourceCompatibility = VERSION_21
-  targetCompatibility = VERSION_21
-}
-kotlin {
-  compilerOptions {
-    jvmTarget = JVM_21
-    freeCompilerArgs.addAll(
-      "-Xjsr305=strict",
-      "-Xvalue-classes",
-      "-opt-in=kotlin.ExperimentalStdlibApi",
-      "-opt-in=kotlin.time.ExperimentalTime"
-    )
-  }
+tasks.withType<KotlinCompile> {
+  kotlinOptions.jvmTarget = "17"
+  kotlinOptions.freeCompilerArgs += "-opt-in=kotlin.time.ExperimentalTime"
 }
 tasks.test {
   useJUnitPlatform()
-  jvmArgs("--enable-preview")
 }
-tasks.bootJar {
-  archiveVersion.set("boot")
+tasks.jar {
+  isZip64 = true
+  manifest.attributes("Main-Class" to "AppKt")
+}
+tasks.shadowJar {
+  minimize() // if build is unsuccessful, you can disable it
+  // also, if build still unsuccessful, you can try to add mergeServiceFiles() call
+}
+tasks.build {
+  dependsOn(tasks.shadowJar)
 }
